[gd_scene load_steps=31 format=2]

[ext_resource path="res://Scripts/unit2_3.gd" type="Script" id=1]
[ext_resource path="res://Sprites/ArmyLv3/KnightLv3Attack.png" type="Texture" id=2]
[ext_resource path="res://Sprites/ArmyLv3/KnightLv3Walk.png" type="Texture" id=3]
[ext_resource path="res://Sprites/ArmyLv3/KnightLv3Idle.png" type="Texture" id=4]
[ext_resource path="res://SFX/Attack.wav" type="AudioStream" id=5]

[sub_resource type="ShaderMaterial" id=1]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 3.04159, 4.91379 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 35, 17 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 35, 0, 35, 17 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 70, 0, 35, 17 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 105, 0, 35, 17 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 140, 0, 35, 17 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 175, 0, 35, 17 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 35, 17 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 4 )
region = Rect2( 35, 0, 35, 17 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 4 )
region = Rect2( 70, 0, 35, 17 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 4 )
region = Rect2( 105, 0, 35, 17 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 4 )
region = Rect2( 140, 0, 35, 17 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 4 )
region = Rect2( 175, 0, 35, 17 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 4 )
region = Rect2( 210, 0, 35, 17 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 35, 17 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 2 )
region = Rect2( 35, 0, 35, 17 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 2 )
region = Rect2( 70, 0, 35, 17 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 2 )
region = Rect2( 105, 0, 35, 17 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 2 )
region = Rect2( 140, 0, 35, 17 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 2 )
region = Rect2( 175, 0, 35, 17 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 2 )
region = Rect2( 210, 0, 35, 17 )

[sub_resource type="SpriteFrames" id=23]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 8 ) ],
"loop": true,
"name": "Walk",
"speed": 10.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 16 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 16 ), SubResource( 16 ) ],
"loop": true,
"name": "Attack",
"speed": 8.0
} ]

[sub_resource type="RectangleShape2D" id=24]
extents = Vector2( 3.62358, 5.15715 )

[sub_resource type="RectangleShape2D" id=25]
extents = Vector2( 9.34031, 0.598393 )

[node name="unit2_3" type="KinematicBody2D"]
material = SubResource( 1 )
z_index = 9
z_as_relative = false
collision_layer = 32
collision_mask = 96
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 7.32569, 1.91748 )
shape = SubResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 23 )
animation = "Attack"
frame = 7
playing = true

[node name="DefendingArea" type="Area2D" parent="." groups=[
"Unit",
]]
position = Vector2( 7.53244, 1.09047 )
collision_layer = 33024
collision_mask = 32768

[node name="CollisionShape2D" type="CollisionShape2D" parent="DefendingArea"]
position = Vector2( -0.206753, 0.827011 )
shape = SubResource( 24 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 6.41625, 1.09047 )
enabled = true
cast_to = Vector2( 5, 0 )
collision_mask = 96

[node name="attack_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -15.01
pitch_scale = 0.96

[node name="attack_timer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.125
autostart = true

[node name="AttackingArea" type="Area2D" parent="."]
position = Vector2( 6.41625, 2.50197 )
monitorable = false
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackingArea"]
shape = SubResource( 25 )
[connection signal="area_entered" from="DefendingArea" to="." method="_on_DefendingArea_area_entered" flags=3]
[connection signal="timeout" from="attack_timer" to="." method="_on_attack_timer_timeout" flags=3]
